# mfd-esxi

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  configure.py  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.cfg
.github/workflows/: build_upload_whl.yml  codeql.yml  manual_release.yml  pull_requests.yml
examples/: simple_example.py
mfd_esxi/: __init__.py  const.py  dswitch.py  esxi_version.py  exceptions.py  host.py  host_api.py  vm_base.py  vm_gold.py  vm_mgr.py  vmknic.py  vswitch.py
mfd_esxi/nsx/: __init__.py  base.py  connection.py  enforcement_point.py  fabric_discovered_node.py  host_transport_node.py  infra_site.py  ip_pool.py  segment.py  transport_zone.py  uplink_profile.py  utils.py  vni_pool.py
mfd_esxi/vcenter/: __init__.py  cluster.py  datacenter.py  datastore.py  exceptions.py  host.py  utils.py  vcenter.py  virtual_adapter.py  virtual_machine.py
mfd_esxi/vcenter/distributed_switch/: __init__.py  dswitch.py  portgroup.py  uplink.py
mfd_esxi/vcenter/virtual_switch/: __init__.py  portgroup.py  vswitch.py
sphinx-doc/: Makefile  README.md  conf.py  generate_docs.py  index.rst  py-modindex.rst
tests/unit/test_mfd_esxi/: conftest.py  fixtures.py  test_dswitch.py  test_esxi_version.py  test_host.py  test_host_api.py  test_vm_base.py  test_vm_gold.py  test_vm_mgr.py  test_vmknic.py  test_vswitch.py
tests/unit/test_mfd_esxi/test_nsx/: test_host_transport_node.py  test_transport_zone.py  test_uplink_profile.py
(+14 files in other folders)
